# ai_vision_model_rockchip_deploy

./: README.md
docs/: 1_board_setup.md  2_camera_setup.md  2_mnn_setup.md  3_model_convert.md  4_gstreamer.md  benchmark_clpeak.md  benchmark_mnn.md  benchmark_ncnn.md  benchmark_tflite.md  setup_ai_framework.md  setup_board.md
source/: README.md
source/face_sdk/vectorizer/: CMakeLists.txt  main.cpp
source/gst-libs/: CMakeLists.txt  gstinferdatameta.c  gstinferdatameta.h
source/gst-rk3399-facedetect/: CMakeLists.txt
source/gst-rk3399-facedetect/src/: UltraFace.cpp  main.cpp
source/gst-rk3399facedetect/: CMakeLists.txt
source/gst-rk3399facedetect/inc/: gstrk3399facedetect.h
source/gst-rk3399facedetect/src/: gstrk3399facedetect.cpp
source/gst-rkbboxdraw/: CMakeLists.txt
source/gst-rkbboxdraw/inc/: gstrkbboxdraw.h
source/gst-rkbboxdraw/src/: gstrkbboxdraw.cpp
source/gst-rkfacedetect/: CMakeLists.txt
source/gst-rkfacedetect/inc/: gstrkfacedetect.h
source/gst-rkfacedetect/src/: UltraFace.cpp  gstrkfacedetect.cpp
source/gst-rkfaceenroll/: CMakeLists.txt
source/gst-rkfaceenroll/inc/: gstrkfaceenroll.h
source/gst-rkfaceenroll/src/: gstrkfaceenroll.c  gstrkfaceenroll.cpp
source/gst-rkfacevectorize/: CMakeLists.txt
source/gst-rkfacevectorize/inc/: gstrkfacevectorize.h
source/gst-rkfacevectorize/src/: InsightFace.cpp  gstrkfacevectorize.cpp
source/rk3399-facedetect/inc/: UltraFace.hpp
source/rk3399-facedetect/src/: UltraFace.cpp  main.cpp
source/sdk/face_detector/: CMakeLists.txt  main.cpp
source/sdk/face_vectorizer/: InsightFace.cpp  InsightFace.hpp  main.cpp
source/sdk/test_full_flow/: CMakeLists.txt  main.cpp
